--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body ng-app="flashCards" ng-controller="MainController">
+        <button ng-repeat="category in categories" class="category-button" ng-click="getCategoryCards(category)" ng-class="{ active: category === category_pressed }"> {{ category }} </button>
     	<div
     		ng-repeat="flashCard in flashCards | orderBy : 'question'"
     		class="flash-card">
