--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
         <link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
     <body ng-app="flashCards"> 
-        
+
         <div ng-include="'templates/stats.html'">
         </div>
 
         <div ng-controller="MainController">
+
+            <button ng-click="resetCategory()" class="category-button"> All Cards </button>
 
             <button 
                 ng-repeat="category in categories" 
@@ -21,15 +23,13 @@
                 {{ category }} 
             </button>
 
-            <button ng-click="resetCategory()" class="category-button"> Reset </button>
-
     	   <div
     		  ng-repeat="flashCard in flashCards | orderBy : 'question'"
     		  class="flash-card">
     	       <h1>{{ flashCard.question | uppercase }}</h1>
     	       <ul class="flash-card-answers">
     	    	  <li
-    	    		 ng-repeat="answer in flashCard.answers"
+    	    		 ng-repeat="answer in flashCard.answers | cheat"
     	    		 class="flash-card-answer"
     	    		 ng-click="answerQuestion(answer, flashCard)">{{ answer.text }}</li>
     	       </ul>
@@ -48,5 +48,6 @@
         <script src="js/controllers/StatsController.js"></script>
         <script src="js/factories/FlashCardsFactory.js"></script>
         <script src="js/factories/ScoreFactory.js"></script>
+        <script src="js/filters/cheat-filter.js"></script>
     </body>
 </html>
